--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
         </form>
         <div id="features"></div>
 
-        <i class="fas fa-fire"></i>
-        <h2 class="features-heading h2-1st">Premium Materials</h2>
+        <h2 class="features-heading h2-1st">
+            <div><i class="fas fa-fire"></i></div>
+            Premium Materials</h2>
         <p class="features-para">Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase.</p>
 
-        <i class="fas fa-truck"></i>
-        <h2 class="features-heading">Fast Shipping</h2>
+        <h2 class="features-heading">
+            <div><i class="fas fa-truck"></i></div>
+            Fast Shipping</h2>
         <p class="features-para">We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied.</p>
 
-        <i class="fas fa-battery-full"></i>
-        <h2 class="features-heading">Quality Assurance</h2>
+        <h2 class="features-heading">
+            <div><i class="fas fa-battery-full"></i></div>
+            Quality Assurance</h2>
         <p class="features-para">For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument.</p>
 
         <div id="how"></div>
